--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
+    "types": ["node"],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
   }
 }
